tests/fail/d008_duplicate_main.dew
# D008: multiple main definitions
def main = fn () { 1 };
def main = fn () { 2 }
